Application from Flathub repo is not displayed in GS if a Fedora Flatpak repo containing the same application is added
Description of problem:
If there is both Flathub and the new Fedora Flatpak OCI repo added, the Quadrapassel application is displayed only once in GNOME Software as the version from the Fedora Flatpak repo. The Flathub one disappears.
Also, there is no Source: registry.fedoraproject.org
displayed in the Fedora Quadrapassel Flatpak description, only directly on the "Details" section of the package page.
Version-Release number of selected component (if applicable):
Fedora Silverblue 29
gnome-software-3.30.5-1.fc29.x86_64
flatpak-1.0.6-3.fc29.x86_64
How reproducible:
Every time.
Steps to Reproduce:
- Use latest Fedora 29 or Fedora Silverblue 29.
- Add Flathub repo:
flatpak remote-add flathub https://flathub.org/repo/flathub.flatpakrepo
- Add Fedora repo:
flatpak remote-add fedora oci+https://registry.fedoraproject.org
- Open GNOME Software and try searching for "Quadrapassel".
Actual results:
Only the Flatpak from Fedora repo can be found.
Expected results:
Both Flathub and Fedora Flatpaks are found.
edit: Updated the description and reproducer to use "Quadrapassel" instead of "Eye of GNOME", see this comment.